Updated requirements & project page

--- a/web/project/index.html
+++ b/web/project/index.html
@@ -28,21 +28,21 @@
       </nav>
     </aside>
 
-    <main>
-      <header class="header">
-        <h1>Project X</h1>
-        <button class="mobile-nav-toggle">=</button>
-        <div class="account-info flex-row">
-          <div class="flex-col">
-            <h6>King Firat</h6>
-            <p class="dimmed">Manager</p>
-          </div>
-          <img src="https://placekitten.com/50/50" alt="" />
-          <p class="material-symbols-outlined dimmed">expand_more</p>
-          <p class="material-symbols-outlined dimmed">logout</p>
+    <header class="header">
+      <h1>Project X</h1>
+      <button class="mobile-nav-toggle material-symbols-outlined">menu</button>
+      <div class="account-info flex-row">
+        <div class="flex-col">
+          <h6>King Firat</h6>
+          <p class="dimmed">Manager</p>
         </div>
-      </header>
+        <img src="https://placekitten.com/50/50" alt="" />
+        <p class="material-symbols-outlined dimmed">expand_more</p>
+        <p class="material-symbols-outlined dimmed">logout</p>
+      </div>
+    </header>
 
+    <main>
       <section class="card">
         <div class="card-title-wrapper">
           <h2 class="title-card">About project</h2>
