Continuing to work on profile page

--- a/web/profile/index.html
+++ b/web/profile/index.html
@@ -44,7 +44,15 @@
       <section class="card">
         <div class="card-title-wrapper">
           <h2 class="title-card">King Firat</h2>
+          <h2 class="title-card">Account</h2>
         </div>
+        <div class="card-image-wrapper">
+          <hr class="solid">
+        <!--This part below will eventually only need to show if the user is actually a manager-->
+          <h1 class="heirarchy-card">Manager</h1>
+          <img class="card-profile-picture" src="https://placekitten.com/50/50" alt="" />
+
+      </div>
       </section>
     </main>
   </body>
