Added more javascript to project page and added client page files

--- a/web/project/index.html
+++ b/web/project/index.html
@@ -108,9 +108,9 @@
         <div class="card-small">
           <h3 class="title-card-small text-center">Project deadline</h3>
           <div class="flex-col-center">
-            <p class="deadline-date">
-              30th <br />
-              October 2022
+            <p class="deadline-date" id="deadline-date">
+            </p>
+            <p class="deadline-days-left" id="days-remaining">
             </p>
           </div>
         </div>
