--- a/web/knowledge/search/index.html
+++ b/web/knowledge/search/index.html
@@ -9,11 +9,11 @@
 
     <link rel="stylesheet" href="/base.css" />
 
-    <title>Knowledge</title>
+    <title>Knowledge Search</title>
   </head>
 
   <body>
-    <h1>Google Search Page</h1>
-    <p>Search Box Here</p>
+    <h1>Search</h1>
+    <p>List of Search Results</p>
   </body>
 </html>
