Removed project overview, my teams from dashboard

--- a/web/dashboard/index.html
+++ b/web/dashboard/index.html
@@ -118,15 +118,15 @@
         </div>
       </section>
 
-      <section class="card">
+      <!-- <section class="card">
         <h2 class="title-card">Project Overview</h2>
         <div class="small-cards-wrapper" id="project-overview-wrapper"></div>
-      </section>
+      </section> -->
 
-      <section class="card">
+      <!-- <section class="card">
         <h2 class="title-card">My Teams</h2>
         <div class="myprojects-wrapper" id="teams-wrapper"></div>
-      </section>
+      </section> -->
 
       <h2 class="title-card">My Projects</h2>
       <section class="myprojects-wrapper">
