Manager dashboard with project overview/progess

--- a/web/manager/index.html
+++ b/web/manager/index.html
@@ -9,6 +9,8 @@
 
     <link rel="icon" type="image/svg" href="/tools.svg" />
     <link rel="stylesheet" href="/base.css" />
+    <link rel="stylesheet" href="./style.css" />
+    <script src="./script.js" type="module"></script>
 
     <title>Manager Dashboard</title>
   </head>
@@ -50,15 +52,20 @@
       <img src="/tools.svg" alt="Make-it-all" width="100%" />
       <nav>
         <ul>
-          <li data-active>
-            <a href="/dashboard/" class="material-symbols-outlined"
-              >leaderboard</a
-            >
+          <li>
+            <a href="/dashboard/" class="material-symbols-outlined">
+              leaderboard
+            </a>
           </li>
           <li>
-            <a href="/knowledge/" class="material-symbols-outlined"
-              >menu_book</a
-            >
+            <a href="/knowledge/" class="material-symbols-outlined">
+              menu_book
+            </a>
+          </li>
+          <li data-active>
+            <a href="/manager/" class="material-symbols-outlined">
+              surfing
+            </a>
           </li>
           <!-- <li><a href="#" class="material-symbols-outlined">mail</a></li> -->
         </ul>
