--- a/web/dashboard/index.html
+++ b/web/dashboard/index.html
@@ -128,36 +128,39 @@
         <div class="myprojects-wrapper" id="teams-wrapper"></div>
       </section> -->
 
-      <h2 class="title-card">My Projects</h2>
-      <section class="myprojects-wrapper">
-        <div class="card-small">
-          <h3 class="title-card-small text-center">Project 1</h3>
-          <p class="card-description text-center">
-            Part one of team project, creating a static page for presentation
-          </p>
-          <div class="link-list text-center">
-            <a href="#">To-Dos</a>
-            <a href="#">View Team</a>
+      <section class="card">
+        <h2 class="title-card">My Projects</h2>
+        <div class="small-cards-wrapper myprojects-wrapper">
+          <div class="card-small bg-accent">
+            <h3 class="title-card-small text-center">Project 1</h3>
+            <p class="card-description text-center">
+              Part one of team project, creating a static page for presentation
+            </p>
+            <div class="link-list text-center">
+              <a href="#">To-Dos</a>
+              <a href="#">View Team</a>
+            </div>
           </div>
-        </div>
-        <div class="card-small">
-          <h3 class="title-card-small text-center">Project 2</h3>
-          <p class="card-description text-center">
-            Part two of team project, creating a static page for presentation
-          </p>
-          <div class="link-list text-center">
-            <a href="#">To-Dos</a>
-            <a href="#">View Team</a>
+          <div class="card-small bg-accent">
+            <h3 class="title-card-small text-center">Project 2</h3>
+            <p class="card-description text-center">
+              Part two of team project, creating a static page for presentation
+            </p>
+            <div class="link-list text-center">
+              <a href="#">To-Dos</a>
+              <a href="#">View Team</a>
+            </div>
           </div>
-        </div>
-        <div class="card-small">
-          <h3 class="title-card-small text-center">Project 3</h3>
-          <p class="card-description text-center">
-            Part three of team project, creating a static page for presentation
-          </p>
-          <div class="link-list text-center">
-            <a href="#">To-Dos</a>
-            <a href="#">View Team</a>
+          <div class="card-small bg-accent">
+            <h3 class="title-card-small text-center">Project 3</h3>
+            <p class="card-description text-center">
+              Part three of team project, creating a static page for
+              presentation
+            </p>
+            <div class="link-list text-center">
+              <a href="#">To-Dos</a>
+              <a href="#">View Team</a>
+            </div>
           </div>
         </div>
       </section>
