Example (temp?) employee overview

--- a/web/manager/index.html
+++ b/web/manager/index.html
@@ -98,8 +98,60 @@
       </section>
 
       <section class="card">
-        <h2 class="title-card">My Underlings</h2>
-        <div class="myprojects-wrapper" id="teams-wrapper"></div>
+        <h2 class="title-card">Employee Overview</h2>
+        <div class="wrap-grid">
+          <!-- (a[href="../profile?id=$"].card-small.bg-accent>img[src="https://placekitten.com/50/50" alt="User Profile Picture" width="50" height="50"]+div.flex-row>h3{Employee $}+p.dimmed{Role}) * 7 -->
+          <a href="../profile?id=1" class="card-small bg-accent">
+            <img src="https://placekitten.com/50/50" alt="User Profile Picture" width="50" height="50">
+            <div class="flex-row">
+              <h3>Employee 1</h3>
+              <p class="dimmed">Role</p>
+            </div>
+          </a>
+          <a href="../profile?id=2" class="card-small bg-accent">
+            <img src="https://placekitten.com/50/50" alt="User Profile Picture" width="50" height="50">
+            <div class="flex-row">
+              <h3>Employee 2</h3>
+              <p class="dimmed">Role</p>
+            </div>
+          </a>
+          <a href="../profile?id=3" class="card-small bg-accent">
+            <img src="https://placekitten.com/50/50" alt="User Profile Picture" width="50" height="50">
+            <div class="flex-row">
+              <h3>Employee 3</h3>
+              <p class="dimmed">Role</p>
+            </div>
+          </a>
+          <a href="../profile?id=4" class="card-small bg-accent">
+            <img src="https://placekitten.com/50/50" alt="User Profile Picture" width="50" height="50">
+            <div class="flex-row">
+              <h3>Employee 4</h3>
+              <p class="dimmed">Role</p>
+            </div>
+          </a>
+          <a href="../profile?id=5" class="card-small bg-accent">
+            <img src="https://placekitten.com/50/50" alt="User Profile Picture" width="50" height="50">
+            <div class="flex-row">
+              <h3>Employee 5</h3>
+              <p class="dimmed">Role</p>
+            </div>
+          </a>
+          <a href="../profile?id=6" class="card-small bg-accent">
+            <img src="https://placekitten.com/50/50" alt="User Profile Picture" width="50" height="50">
+            <div class="flex-row">
+              <h3>Employee 6</h3>
+              <p class="dimmed">Role</p>
+            </div>
+          </a>
+          <a href="../profile?id=7" class="card-small bg-accent">
+            <img src="https://placekitten.com/50/50" alt="User Profile Picture" width="50" height="50">
+            <div class="flex-row">
+              <h3>Employee 7</h3>
+              <p class="dimmed">Role</p>
+            </div>
+          </a>
+          
+        </div>
       </section>
 
       
