root remove funny background

--- a/web/index.html
+++ b/web/index.html
@@ -17,13 +17,5 @@
     <title>Trelno</title>
   </head>
 
-  <body
-    style="
-      background-image: url(/tools.svg);
-      background-size: 100vh;
-      overflow: hidden;
-      width: 100vw;
-      height: 100vh;
-    "
-  ></body>
+  <body></body>
 </html>
