Upload button on profile page

--- a/web/profile/index.html
+++ b/web/profile/index.html
@@ -51,6 +51,21 @@
         <!--This part below will eventually only need to show if the user is actually a manager-->
           <h1 class="heirarchy-card">Manager</h1>
           <img class="card-profile-picture" src="https://placekitten.com/50/50" alt="" />
+        </div>
+        <div class="card-button-wrapper">
+          <button class="card-upload-button" data-action="upload-photo">
+            <p>Upload photo</p>
+          </button>
+        </div>
+        <div class="card-customisation-wrapper">
+          <hr class="solid">
+          <div class="wrapper-appearance">
+            <h1 class="h1-appearance">Appearance</h1>
+            <h2 class="h2-appearance">Customize how Make-It-All looks on your device</h2>
+          </div>
+
+        </div>
+
 
       </div>
       </section>
