Working on user profile page, adding segments of their details

--- a/web/profile/index.html
+++ b/web/profile/index.html
@@ -58,10 +58,29 @@
           </button>
         </div>
         <div class="card-customisation-wrapper">
-          <hr class="solid">
           <div class="wrapper-appearance">
+            <hr class="solid">
             <h1 class="h1-appearance">Appearance</h1>
-            <h2 class="h2-appearance">Customize how Make-It-All looks on your device</h2>
+            <label for="theme" class="label-subtext">Customize how Make-It-All looks on your device</label>
+            <select name="theme" class="theme">
+              <option value="light">Light</option>
+              <option value="dark">Dark</option>
+            </select>
+          </div>
+          <div class="wrapper-password">
+            <hr class="solid">
+            <h1 class="h1-password">Password</h1>
+            <label for="change-password-btn" class="label-subtext">Change your password to a more memorable one</label>
+            <button class="change-password-btn" data-action="change-password">
+              <p>Change Password</p>
+            </button>
+          </div>
+          <div class="wrapper-email">
+            <hr class="solid">
+            <h1 class="h1-email">My Email</h1>
+            <label for="email-box" class="label-subtext">This is your assigned company email</label>
+          </div>
+
           </div>
 
         </div>
