Updated project page elements (description, members, project details cards)

--- a/web/project/index.html
+++ b/web/project/index.html
@@ -83,24 +83,21 @@
     </header>
 
     <main>
-      <section class="card">
-        <div class="card-title-wrapper">
-          <h2 class="title-card">About project</h2>
-        </div>
-        <hr class="item-break" />
-        <div class="card-content">
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-        </div>
-      </section>
+
+      <h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+        Vestibulum lorem sed risus ultricies tristique nulla aliquet enim tortor. 
+        Sed egestas egestas fringilla phasellus faucibus scelerisque.</h2>
 
       <section class="topcards-wrapper">
         <div class="card-small">
           <h3 class="title-card-small text-center">Project progress</h3>
-          <div class="progress-circle p23">
-            <span>10%</span>
-            <div class="left-half-clipper">
-              <div class="first50-bar"></div>
-              <div class="value-bar"></div>
+          <div class="spinner-parent" style="--progress:60%; --progress-angle:0.6turn">
+            <div class="spinner"></div>
+            <div class="spinner-end-wrapper"></div>
+            <div class="center">
+              <h3>60%</h3>
+              <p>9/15 Tasks complete</p>
             </div>
           </div>
         </div>
@@ -116,14 +113,14 @@
         </div>
 
         <div class="card-small">
-          <h3 class="title-card-small text-center">Project manager</h3>
+          <h3 class="title-card-small text-center">Team leader</h3>
           <div class="flex-col-center">
-            <p class="card-small-text">Firat Batmaz</p>
             <img
               src="https://placekitten.com/50/50"
               alt=""
               class="card-small-image"
             />
+            <p class="card-small-text">Firat Batmaz</p>
           </div>
         </div>
 
@@ -179,41 +176,102 @@
       </section>
 
       <section class="card">
+        
         <div class="card-title-wrapper">
-          <h2 class="title-card">Teams on this project</h2>
+          <h2 class="title-card">Members on this project</h2>
+        </div>
+        <div class="link-list move-right">
+          <a href="#">Team 1</a>
         </div>
 
-        <div class="small-cards-wrapper-center">
-          <div class="card-small bg-accent">
-            <h3 class="title-card-small text-center">Team 1</h3>
-            <div>
-              <img src="Members.png" alt="Team members" width="100%" />
-            </div>
+        <div class="project-members-wrap">
+
+          <div class="card-small bg-accent flex-col-center card-smaller">
+            <h3 class="title-card-small">Corcimaru Calin</h3>
+            <img
+              src="https://placekitten.com/50/50"
+              alt=""
+              class="card-small-image align-image"
+            />
             <div class="link-list text-center">
-              <a href="#">View Team Members</a>
+              <a href="#">View Employee details</a>
             </div>
           </div>
 
-          <div class="card-small bg-accent">
-            <h3 class="title-card-small text-center">Team 2</h3>
-            <div>
-              <img src="Members.png" alt="Team members" width="100%" />
-            </div>
+          <div class="card-small bg-accent flex-col-center card-smaller">
+            <h3 class="title-card-small">Corcimaru Calin</h3>
+            <img
+              src="https://placekitten.com/50/50"
+              alt=""
+              class="card-small-image align-image"
+            />
             <div class="link-list text-center">
-              <a href="#">View Team Members</a>
+              <a href="#">View Employee details</a>
             </div>
           </div>
 
-          <div class="card-small bg-accent">
-            <h3 class="title-card-small text-center">Team 3</h3>
-            <div>
-              <img src="Members.png" alt="Team members" width="100%" />
-            </div>
+          <div class="card-small bg-accent flex-col-center card-smaller">
+            <h3 class="title-card-small">Corcimaru Calin</h3>
+            <img
+              src="https://placekitten.com/50/50"
+              alt=""
+              class="card-small-image align-image"
+            />
             <div class="link-list text-center">
-              <a href="#">View Team Members</a>
+              <a href="#">View Employee details</a>
             </div>
           </div>
+
+          <div class="card-small bg-accent flex-col-center card-smaller">
+            <h3 class="title-card-small">Corcimaru Calin</h3>
+            <img
+              src="https://placekitten.com/50/50"
+              alt=""
+              class="card-small-image align-image"
+            />
+            <div class="link-list text-center">
+              <a href="#">View Employee details</a>
+            </div>
+          </div>
+
+          <div class="card-small bg-accent flex-col-center card-smaller">
+            <h3 class="title-card-small">Corcimaru Calin</h3>
+            <img
+              src="https://placekitten.com/50/50"
+              alt=""
+              class="card-small-image align-image"
+            />
+            <div class="link-list text-center">
+              <a href="#">View Employee details</a>
+            </div>
+          </div>
+
+          <div class="card-small bg-accent flex-col-center card-smaller">
+            <h3 class="title-card-small">Corcimaru Calin</h3>
+            <img
+              src="https://placekitten.com/50/50"
+              alt=""
+              class="card-small-image align-image"
+            />
+            <div class="link-list text-center">
+              <a href="#">View Employee details</a>
+            </div>
+          </div>
+
+          <div class="card-small bg-accent flex-col-center card-smaller">
+            <h3 class="title-card-small">Corcimaru Calin</h3>
+            <img
+              src="https://placekitten.com/50/50"
+              alt=""
+              class="card-small-image align-image"
+            />
+            <div class="link-list text-center">
+              <a href="#">View Employee details</a>
+            </div>
+          </div>
+
         </div>
+        
       </section>
     </main>
 
