minor ui tweaks

--- a/web/dashboard/index.html
+++ b/web/dashboard/index.html
@@ -140,7 +140,7 @@
 
       <section class="card">
         <h2 class="title-card">My Projects</h2>
-        <div class="small-cards-wrapper myprojects-wrapper">
+        <div class="small-cards-wrapper">
           <div class="card-small bg-accent">
             <h3 class="title-card-small text-center">Project 1</h3>
             <p class="card-description text-center">
