Dashboard navigation update

--- a/web/dashboard/index.html
+++ b/web/dashboard/index.html
@@ -33,16 +33,17 @@
             <hr />
           </li>
           <li>
+            <a href="/manager/">
+              <span class="material-symbols-outlined">surfing</span>
+              Managers
+            </a>
+            <hr />
+          </li>
+          <li>
             <a href="">
               <span class="material-symbols-outlined">menu_book</span>
               Knowledge
             </a>
-            <hr />
-          </li>
-          <li class="hidden">
-            <a href="/manager/"
-              ><span class="material-symbols-outlined">surfing</span></a
-            >
             <hr />
           </li>
           <li>
@@ -62,6 +63,9 @@
             <a href="/dashboard/" class="material-symbols-outlined"
               >leaderboard</a
             >
+          </li>
+          <li>
+            <a href="/manager/" class="material-symbols-outlined">surfing</a>
           </li>
           <li>
             <a href="/knowledge/" class="material-symbols-outlined"
