Desktop navigation all icons

--- a/web/knowledge/index.html
+++ b/web/knowledge/index.html
@@ -13,7 +13,34 @@
   </head>
 
   <body>
-    <h1>Google Search Page</h1>
-    <p>Search Box Here</p>
+    <aside class="side-menu">
+      <img src="/tools.svg" alt="Make-it-all" width="100%" />
+      <nav>
+        <ul>
+          <li>
+            <a href="/dashboard/" class="material-symbols-outlined"
+              >leaderboard</a
+            >
+          </li>
+          <li>
+            <a href="/manager/" class="material-symbols-outlined">surfing</a>
+          </li>
+          <li data-active>
+            <a href="/knowledge/" class="material-symbols-outlined"
+              >menu_book</a
+            >
+          </li>
+          <li>
+            <a href="/profile/" class="material-symbols-outlined"
+              >manage_accounts</a
+            >
+          </li>
+        </ul>
+      </nav>
+    </aside>
+    <main>
+      <h1>Google Search Page</h1>
+      <p>Search Box Here</p>
+    </main>
   </body>
 </html>
