--- a/web/manager/index.html
+++ b/web/manager/index.html
@@ -57,15 +57,20 @@
               leaderboard
             </a>
           </li>
+          <li data-active>
+            <a href="/manager/" class="material-symbols-outlined">
+              surfing
+            </a>
+          </li>
           <li>
             <a href="/knowledge/" class="material-symbols-outlined">
               menu_book
             </a>
           </li>
-          <li data-active>
-            <a href="/manager/" class="material-symbols-outlined">
-              surfing
-            </a>
+          <li>
+            <a href="/profile/" class="material-symbols-outlined">
+              manage_accounts
+              </a>
           </li>
           <!-- <li><a href="#" class="material-symbols-outlined">mail</a></li> -->
         </ul>
