--- a/web/profile/index.html
+++ b/web/profile/index.html
@@ -17,13 +17,21 @@
       <img src="/tools.svg" alt="Make-it-all" width="100%" />
       <nav>
         <ul>
-          <li data-active>
+          <li>
             <a href="/dashboard/" class="material-symbols-outlined"
               >leaderboard</a
             >
           </li>
+          <li >
+            <a href="/manager/" class="material-symbols-outlined">surfing</a>
+          </li>
           <li><a href="#" class="material-symbols-outlined">menu_book</a></li>
-          <li><a href="#" class="material-symbols-outlined">mail</a></li>
+          <li  data-active>
+            <a href="/profile/" class="material-symbols-outlined"
+              >manage_accounts</a
+            >
+          </li>
+          <!-- <li><a href="#" class="material-symbols-outlined">mail</a></li> -->
         </ul>
       </nav>
     </aside>
