--- a/web/project/index.html
+++ b/web/project/index.html
@@ -58,9 +58,17 @@
               >leaderboard</a
             >
           </li>
+          <li >
+            <a href="/manager/" class="material-symbols-outlined">surfing</a>
+          </li>
           <li>
             <a href="/knowledge/" class="material-symbols-outlined"
               >menu_book</a
+            >
+          </li>
+          <li  >
+            <a href="/profile/" class="material-symbols-outlined"
+              >manage_accounts</a
             >
           </li>
           <!-- <li><a href="#" class="material-symbols-outlined">mail</a></li> -->
