Added email part of profile page

--- a/web/profile/index.html
+++ b/web/profile/index.html
@@ -79,6 +79,7 @@
             <hr class="solid">
             <h1 class="h1-email">My Email</h1>
             <label for="email-box" class="label-subtext">This is your assigned company email</label>
+            <label class="email-box">f.batmaz@lboro.ac.uk</label>
           </div>
 
           </div>
