--- a/web/knowledge/search/index.html
+++ b/web/knowledge/search/index.html
@@ -7,7 +7,11 @@
     <meta name="color-scheme" content="light dark" />
     <meta name="theme-color" content="#1e1e1e" />
 
+    <link rel="icon" type="image/svg" href="/tools.svg" />
     <link rel="stylesheet" href="/base.css" />
+    <link rel="stylesheet" href="style.css" />
+
+    <!-- <script defer type="module" src="script.js"></script> -->
 
     <title>Knowledge Search Results</title>
   </head>
@@ -38,9 +42,113 @@
         </ul>
       </nav>
     </aside>
+    <dialog class="nav-mobile">
+      <div class="flex-row kanban-title">
+        <h2>Menu</h2>
+        <button class="btn-icon material-symbols-outlined dialog-close">
+          close
+        </button>
+      </div>
+      <nav>
+        <ul>
+          <li>
+            <a href="/dashboard/">
+              <span class="material-symbols-outlined">leaderboard</span>
+              Dashboard
+            </a>
+          </li>
+          <hr />
+          <li>
+            <a href="/knowledge/" data-active>
+              <span class="material-symbols-outlined">menu_book</span>
+              Knowledge
+            </a>
+          </li>
+          <hr />
+          <li class="hidden">
+            <a href="/manager/"
+              ><span class="material-symbols-outlined">surfing</span></a
+            >
+          </li>
+          <hr />
+          <li>
+            <a href="/profile/">
+              <span class="material-symbols-outlined">manage_accounts</span>
+              My Profile
+            </a>
+          </li>
+        </ul>
+      </nav>
+    </dialog>
+    <header class="header">
+      <h1>Knowledge Management</h1>
+      <button class="mobile-nav-toggle material-symbols-outlined">menu</button>
+      <div class="account-info flex-row">
+        <div class="flex-col">
+          <h6 id="user-name">King Firat</h6>
+          <p id="user-rank" class="dimmed">Manager</p>
+        </div>
+        <img
+          src="https://placekitten.com/50/50"
+          alt="User Profile Picture"
+          width="50"
+          height="50"
+        />
+        <p class="material-symbols-outlined dimmed">expand_more</p>
+        <p class="material-symbols-outlined dimmed">logout</p>
+      </div>
+    </header>
     <main>
-      <h1>Search Results</h1>
-      <p>List of Search Results</p>
+      <section class="search">
+        <input type="text" name="q" placeholder="Search..." class="input" />
+        <button type="submit" class="btn-action">
+          <p>Search</p>
+          <span class="material-symbols-outlined">search</span>
+        </button>
+        <select name="topic" class="input">
+          <option value="">Topic</option>
+          <option value="1">Technical</option>
+          <option value="2">Non-Technical</option>
+        </select>
+      </section>
+      <section class="posts">
+        <article class="card post">
+          <aside>
+            <div class="topic">
+              <button type="button" class="btn-action">
+                <p>Topic</p>
+                <span class="material-symbols-outlined">Topic</span>
+              </button>
+            </div>
+            <div class="account">
+              <img
+                src="https://placekitten.com/50/50"
+                alt="User Profile Picture"
+              />
+              <a href="/profile/?id=1" class="user-name">KING FIRAT</a>
+              <span class="user-rank">Manager</span>
+            </div>
+            <span>28/10/2022</span>
+          </aside>
+          <main>
+            <h3>Post Title</h3>
+            <hr />
+            <div id="preview" class="preview-post">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil,
+              repellat doloribus molestias et voluptatum quaerat ea debitis id
+              earum ab, sunt reprehenderit, pariatur distinctio exercitationem.
+              Pariatur facilis earum impedit nam! Lorem ipsum dolor sit amet
+              consectetur adipisicing elit. Minus, minima. Nostrum cum, quo eius
+              obcaecati deleniti quia earum debitis placeat voluptas molestias
+              quibusdam impedit voluptate delectus nemo cupiditate ipsam ipsum.
+            </div>
+            <button type="button" class="btn-action">
+              <p>View Post</p>
+              <span class="material-symbols-outlined">visibility</span>
+            </button>
+          </main>
+        </article>
+      </section>
     </main>
   </body>
 </html>
